--- a/styles/style.css
+++ b/styles/style.css
@@ -1,19 +1,19 @@
 *{
     margin: 0;
     padding: 0;
+
 }
 
 body{
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    height: 100%;
 }
 
 .first_container{
     width: 100%;
-    height: 850px;
-    z-index: 1;
+    height: 90vh;
+    position: relative;
 }
 
 .background{
@@ -25,6 +25,11 @@ body{
     height: 850px;
     filter: brightness(50%);
     z-index: -1;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .menu{
@@ -134,4 +139,6 @@ ul li{
     color: rgb(73, 210, 5);
     font-size: 55px;
 }
+
+
 
